week2 code and intro

--- a/week1/1.2/01_being_and_nothingness.ipynb
+++ b/week1/1.2/01_being_and_nothingness.ipynb
@@ -3996,9 +3996,9 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python (Data Science)",
    "language": "python",
-   "name": "python3"
+   "name": "data_science_env"
   },
   "language_info": {
    "codemirror_mode": {
