--- a/week1/1.1/01_where_are_the_taxis_in_nyc.ipynb
+++ b/week1/1.1/01_where_are_the_taxis_in_nyc.ipynb
@@ -782,6 +782,9 @@
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "slideshow": {
      "slide_type": "slide"
     }
@@ -2655,7 +2658,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x287b1b287d0>"
+       "<matplotlib.collections.PathCollection at 0x1f1c7e6d2e0>"
       ]
      },
      "execution_count": 22,
@@ -2753,9 +2756,9 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python (Data Science)",
    "language": "python",
-   "name": "python3"
+   "name": "data_science_env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2771,5 +2774,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
